--- a/styles/index.css
+++ b/styles/index.css
@@ -12,4 +12,17 @@ body {
 
 header {
 	text-align: center;
+	padding-bottom: 20px;
+}
+
+form {
+	justify-content: center;
+	text-align: center;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+textarea, input {
+	width: 100%;
 }
