--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,19 @@ body {
 	width: 100%;
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif";
 }
+.bookmark {
+	border: 1px solid black;
+	border-radius: 3px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px;
+	width: 80%;
+	padding: 0px 20px 10px;
+}
+
+.bookmark-title {
+	text-align: center;
+}
 
 header {
 	text-align: center;
