--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,13 @@
 
 body {
 	width: 100%;
+	justify-content: center;
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif";
+}
+.add-bookmark {
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
 }
 .bookmark {
 	border: 1px solid black;
@@ -19,7 +25,7 @@ body {
 	padding: 0px 20px 10px;
 }
 
-.bookmark-title {
+.bookmark-name {
 	text-align: center;
 }
 
@@ -28,7 +34,7 @@ header {
 	padding-bottom: 20px;
 }
 
-form {
+fieldset {
 	justify-content: center;
 	text-align: center;
 	width: 80%;
